Reduce dark mode toggle size and ensure it works

--- a/src/style.css
+++ b/src/style.css
@@ -470,8 +470,8 @@ h4 {
 /* Toggle Switch Styles */
 .toggle-switch {
     position: relative;
-    width: 100px;
-    height: 50px;
+    width: 60px;
+    height: 30px;
     --light: #d8dbe0;
     --dark: #28292c;
     --link: rgb(27, 129, 112);
@@ -481,11 +481,11 @@ h4 {
 .switch-label {
     position: absolute;
     width: 100%;
-    height: 50px;
+    height: 30px;
     background-color: var(--dark);
-    border-radius: 25px;
+    border-radius: 15px;
     cursor: pointer;
-    border: 3px solid var(--dark);
+    border: 2px solid var(--dark);
 }
 
 .checkbox {
@@ -497,7 +497,7 @@ h4 {
     position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: 25px;
+    border-radius: 15px;
     transition: 0.3s;
 }
 
@@ -508,18 +508,18 @@ h4 {
 .slider::before {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 25px;
-    height: 25px;
+    top: 5px;
+    left: 5px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
-    box-shadow: inset 12px -4px 0px 0px var(--light);
+    box-shadow: inset 8px -3px 0px 0px var(--light);
     background-color: var(--dark);
     transition: 0.3s;
 }
 
 .checkbox:checked~.slider::before {
-    transform: translateX(50px);
+    transform: translateX(30px);
     background-color: var(--dark);
     box-shadow: none;
 }
